password reseting with email realized

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <img class="header-logo-image" src="img/logo.png" alt="logo: Pikadu">
       </a> -->
       <nav class="header-nav">
-        <ul class="header-menu">
+        <!-- <ul class="header-menu">
           <li class="header-menu-item"><a href="#" class="header-menu-link">Общение</a></li>
           <li class="header-menu-item"><a href="#" class="header-menu-link">Политика</a></li>
           <li class="header-menu-item"><a href="#" class="header-menu-link">Природа</a></li>
-        </ul>
+        </ul> -->
       </nav>
       <div class="input-group search">
         <input type="search" class="search-input" placeholder="Поиск по сайту">
