new files realized

--- a/rules.html
+++ b/rules.html
@@ -20,6 +20,7 @@
       </a> -->
       <nav class="header-nav">
         <ul class="header-menu">
+          <li class="header-menu-item"><a href="index.html" class="header-menu-link">Главная</a></li>
           <li class="header-menu-item"><a href="rules.html" class="header-menu-link">Правила</a></li>
           <li class="header-menu-item"><a href="contacts.html" class="header-menu-link">Контакты</a></li>
           <!-- <li class="header-menu-item"><a href="#" class="header-menu-link">Природа</a></li> -->
