--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js" defer></script>
   <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js" defer></script>
   <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-database.js" defer></script>
-  <script defer src="dist/main.js" type="module"></script>
+  <script defer src="dist/main.js"></script>
   <script src="js/script.js" defer></script>
 </head>
 <body>
