--- a/contacts.html
+++ b/contacts.html
@@ -23,7 +23,7 @@
           <li class="header-menu-item"><a href="index.html" class="header-menu-link">Главная</a></li>
           <li class="header-menu-item"><a href="rules.html" class="header-menu-link">Правила</a></li>
           <li class="header-menu-item"><a href="#" class="header-menu-link">Контакты</a></li>
-          <!-- <li class="header-menu-item"><a href="#" class="header-menu-link">Природа</a></li> -->
+          <li class="header-menu-item"><a href="comments.html" class="header-menu-link">Обсуждения</a></li>
         </ul>
       </nav>
       <div class="input-group search">
