--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <li class="header-menu-item"><a href="#" class="header-menu-link">Главная</a></li>
           <li class="header-menu-item"><a href="rules.html" class="header-menu-link">Правила</a></li>
           <li class="header-menu-item"><a href="contacts.html" class="header-menu-link">Контакты</a></li>
+          <li class="header-menu-item"><a href="comments.html" class="header-menu-link">Обсуждения</a></li>
         </ul>
       </nav>
       <div class="input-group search">
